--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"devDependencies": {
 		"autoprefixer": "^10.4.14",
 		"concurrently": "^8.0.1",
+		"cssnano": "^6.0.1",
+		"postcss": "^8.4.24",
 		"postcss-cli": "^10.1.0",
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^11.2.2",
